--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
-
+apply plugin: 'com.android.databinding'
 
 Integer VERSION_CODE = 1
 String VERSION_NAME = "1.0"
@@ -8,13 +8,13 @@ String APK_NAME = "FelicaEx"
 android {
     compileSdkVersion 23
     buildToolsVersion "22.0.1"
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            output.outputFile = new File(
-                    output.outputFile.parent,
-                    output.outputFile.name.replace(output.outputFile.name, VERSION_CODE + "-" + VERSION_NAME + "-" + APK_NAME + ".apk"))
-        }
-    }
+//    applicationVariants.all { variant ->
+//        variant.outputs.each { output ->
+//            output.outputFile = new File(
+//                    output.outputFile.parent,
+//                    output.outputFile.name.replace(output.outputFile.name, VERSION_CODE + "-" + VERSION_NAME + "-" + APK_NAME + ".apk"))
+//        }
+//    }
     defaultConfig {
         applicationId "com.sunnypoint.felicaexample"
         minSdkVersion 14
@@ -23,7 +23,13 @@ android {
         versionName VERSION_NAME
     }
     buildTypes {
+        debug {
+            debuggable true
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
         release {
+            debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -47,12 +53,14 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:support-annotations:23.0.1'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.squareup:otto:1.3.8'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.14'
     compile 'com.google.code.gson:gson:2.3.1'
-
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile files('libs/MFCUtility_1.0.1.jar')
     compile files('libs/nfc-felica-lib.jar')
+    compile project(':ripplebackground')
 }
