--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,15 +22,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".views.MainActivity"
-            android:screenOrientation="portrait"
-            android:taskAffinity="com.lcl.sunnypoints.taskAffinityUsbEventReceiver">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
-            </intent-filter>
+            <!--<intent-filter>-->
+                <!--<action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />-->
+            <!--</intent-filter>-->
 
             <meta-data
                 android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
